@@ -38,6 +38,7 @@ class CDXVADecoderH264 : public CDXVADecoder
 public:
 	CDXVADecoderH264 (CMPCVideoDecFilter* pFilter, IAMVideoAccelerator*  pAMVideoAccelerator, DXVAMode nMode, int nPicEntryNumber);
 	CDXVADecoderH264 (CMPCVideoDecFilter* pFilter, IDirectXVideoDecoder* pDirectXVideoDec, DXVAMode nMode, int nPicEntryNumber, DXVA2_ConfigPictureDecode* pDXVA2Config);
+	virtual ~CDXVADecoderH264();
 
 	virtual HRESULT DecodeFrame   (BYTE* pDataIn, UINT nSize, REFERENCE_TIME rtStart, REFERENCE_TIME rtStop);
 	virtual void	SetExtraData  (BYTE* pDataIn, UINT nSize);
@@ -45,15 +46,20 @@ public:
 	virtual void	Flush();
 
 protected :
-
+	virtual int		FindOldestFrame();
 
 private:
 
 	DXVA_PicParams_H264		m_DXVAPicParams;
 	DXVA_Qmatrix_H264		m_DXVAScalingMatrix;
+	DXVA_Slice_H264_Short*	m_pSliceShort;
+	DXVA_Slice_H264_Long*	m_pSliceLong; 
+	UINT					m_nMaxSlices;
 	UINT					m_nCurRefFrame;		// First free RefFrameList position
 	int						m_nNALLength;
 	bool					m_bUseLongSlice;
+	int						m_nOutPOC;
+	REFERENCE_TIME			m_rtOutStart;
 
 	// Private functions
 	void					Init();
